# GreenAssembly-website-Ludivine-F-

./: .gitignore  Cargo.toml  README.md  askama.toml  gacli.toml  package.json  robots.txt  sitemap.xml  webpack.config.js
assets/js/: contact.js  global.js  login.js  portfolio.js  project.js
assets/js/components/: assets_grid.js  lazy_loader.js  lightbox.js  modal.js
assets/js/pages/: blog.js  contact.js  global.js  index.js  login.js  my_little_plus.js  portfolio.js  project.js
assets/js/utils/: base642blob.js  http.js  swal_error.js
assets/scss/: admin.scss  custom.scss  global.scss
assets/scss/abstracts/: _variables.scss  _variables_admin.scss
assets/scss/base/: _base.scss
assets/scss/components/: _button.scss  _card.scss  _drop_zone.scss  _input.scss  _lightbox.scss  _modal.scss  rich_text_editor.scss
assets/scss/layout/: _menu.scss
assets/scss/layouts/: _blog_nav.scss  _footer.scss  _menu.scss
assets/scss/pages/: article.scss  blog.scss  contact.scss  index.scss  legals.scss  login.scss  motion_design.scss  my_little_plus.scss  portfolio.scss  project.scss
assets/scss/themes/: _admin.scss  (+1 more)
sql/: inserts.sql  procedures.sql  tables.sql  tests_inserts.sql  triggers.sql
src/: main.rs
src/controllers/: admin.rs  blog.rs  contact.rs  dashboard.rs  metrics.rs  mod.rs  motion_design.rs  my_little_plus.rs  portfolio.rs  user.rs
src/routes/: admin.rs  api.rs  blog.rs  mod.rs  portfolio.rs  user.rs
src/services/: attempts.rs  files.rs  login_attempts.rs  metrics.rs  mod.rs  my_little_plus.rs  pages.rs  settings.rs  user.rs  videos.rs
src/utils/: https.rs  image.rs  mod.rs  patch.rs  ua.rs
templates/: back_office.html  base.html  blog.html  blog_category.html  blog_index.html  contact.html  front_office.html  index.html  motion_design.html  portfolio.html  portfolio_project.html
templates/blog/: article.html  category.html  index.html
templates/components/: project_tile.html
templates/includes/: asset_edit_modal.html  footer.html  metrics.html  modal_blog_article.html  modal_blog_category.html  modal_project.html  navbar.html
templates/layouts/: front_office.html
templates/pages/: contact.html  index.html  legals.html  login.html  motion_design.html  my-little-plus.html  my_little_plus.html  portfolio.html  portfolio_project.html
(+50 files in other folders)
