[package]
name = "ludivine_farat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
regex = "1.5.4"
sqlx = { version = "0.5.9", features = ["macros", "postgres", "chrono", "runtime-async-std-native-tls", "uuid", "json"] }
rustls = "0.18.1"
askama = { version = "0.10.5", features = ["serde-json", "with-actix-web"] }
actix-web = { version = "3.3.3", features = ["rustls"] }
actix-rt = "2.5.0"
actix-service = "1"
serde = { version = "1.0.132", features = ["derive"] }
futures = "0.3.19"
futures-util = { version = "0.3.19", default-features = false }
actix-files = "0.5.0"
askama_actix = "0.11.1"
woothee = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
slugmin = "1.0.2"
serde_json = "1.0.73"
actix-identity = "0.3.1"
argon2 = "0.3.2"
rand_core = { version = "0.6.3", features = ["std"] }
actix_extract_multipart = "1.0.0"
ammonia = "3.1.2"
image = "0.23.14"
webp = "0.2.0"
rand = "0.8.4"
ring = "0.16.20"
